fix: 더보기옵션 컴포넌트 z-index 및 main-layout 너비 침범 문제 해결2

--- a/frontend/src/assets/css/components/popupModal/moreOption.scss
+++ b/frontend/src/assets/css/components/popupModal/moreOption.scss
@@ -1,6 +1,6 @@
 // moreOption.jsx
 .more-option {
-    position: fixed;
+    position: absolute;
     display: flex;
     align-items: flex-end;
     top: 0;
